Modify workflow to run only via UI

--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -1,9 +1,6 @@
 name: Build App
 run-name: Build App on push
-on:
-  push:
-    branches:
-      - release
+on: workflow_dispatch
 jobs:
   pyinstaller-build:
     runs-on: windows-latest
